# Athena

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: create-publish-image.yml  gitlab-mirroring.yml
migrations/2022-02-13-081716_create_messages/: up.sql
migrations/2022-03-03-113138_create_profile/: up.sql
migrations/2022-03-07-122454_create_followers/: down.sql  up.sql
migrations/2022-08-15-145758_create_gossips/: down.sql  up.sql
seed/: seeder.sql
src/: db.rs  errors.rs  handler.rs  lib.rs  main.rs  message_repository.rs  models.rs  schema.rs  server.rs  session.rs
src/auth/: auth.rs
src/controllers/: auth_controller.rs  mod.rs  profile_controller.rs  search_controller.rs  user_controller.rs
src/extractors/: http_auth_extractor.rs  jwt_data_decode.rs
src/libs/: aws.rs
src/message_handlers/: auth_handler.rs  mod.rs  profile_handlers.rs  search_handlers.rs  settings_handler.rs  user_handlers.rs
src/models/: auth.rs  delivery_report.rs  gossip.rs  message.rs  mod.rs  profile.rs  settings.rs  token.rs  user.rs  user_requests.rs
src/repositories/: message_repository.rs  mod.rs  user_repository.rs
src/types/: mod.rs  ws_server_events.rs
src/utils/: hash.rs
