[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"
actix-files = "0.3"
actix-cors = "0.6.0"
actix-web-httpauth = "0.6.0"
actix-web-grants= "3.0.0"
actix-multipart = "0.4"
actix-web-validator = "3.0.0"

aws-config = "0.11"
aws-sdk-s3 = "0.11"
tokio = { version = "1", features = ["full"] }

chrono = {version = "0.4.0", features = ["serde"]}
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1"

dotenv = "0.15.0"
bytes = "0.5"
jsonwebtoken = "8"
byteorder = "1.3"
futures = "0.3"
env_logger = "0.9"
serde = "1"
serde_json = "1"
serde_with = { version = "1.12.0", features = ["json"]}
serde_qs = { version = "0.9", features = ["actix4"]}
url = { version = "2", features = ["serde"] }
validator = { version = "0.14", features = ["derive"] }
blake3 = "1.3.1"
# Needed for Postgres.
openssl = "*"
openssl-probe = "0.1.2"
derive_more = "0.99.17"
sanitize-filename = "0.3"
uuid = { version = "0.8", features = ["v4"] }
mime = "0.3"